# wal-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: batch.rs  error.rs  lib.rs  main.rs  primitives.rs
tests/: wal.rs
