[package]
name = "wal"
version = "0.1.0"
authors = ["samparsky <8148384+samparsky@users.noreply.github.com>"]
edition = "2018"
exclude = ["examples/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "^1.0", features = ['derive'] }
serde_json = "1.0"